; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/sep/extr_sep_driver.c_sep_shared_virt_to_bus.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/sep/extr_sep_driver.c_sep_shared_virt_to_bus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sep_device = type { i32, i8* }

@.str = private unnamed_addr constant [32 x i8] c"sep: virt to bus b %08llx v %p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sep_device*, i8*)* @sep_shared_virt_to_bus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sep_shared_virt_to_bus(%struct.sep_device* %0, i8* %1) #0 {
  %3 = alloca %struct.sep_device*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.sep_device* %0, %struct.sep_device** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.sep_device*, %struct.sep_device** %3, align 8
  %7 = getelementptr inbounds %struct.sep_device, %struct.sep_device* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = sext i32 %8 to i64
  %10 = load i8*, i8** %4, align 8
  %11 = load %struct.sep_device*, %struct.sep_device** %3, align 8
  %12 = getelementptr inbounds %struct.sep_device, %struct.sep_device* %11, i32 0, i32 1
  %13 = load i8*, i8** %12, align 8
  %14 = ptrtoint i8* %10 to i64
  %15 = ptrtoint i8* %13 to i64
  %16 = sub i64 %14, %15
  %17 = add nsw i64 %9, %16
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @edbg(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %19, i8* %20)
  %22 = load i32, i32* %5, align 4
  ret i32 %22
}

declare dso_local i32 @edbg(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
